--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <body>
     <h1>Is your birthday lucky? 🥳</h1>
     <div class="container">
-      <div class="container-fluid">
-        <label for="date-of-birth">Date of Birth:</label>
-        <input type="date" id="date-of-birth" >
-        <label for="lucky-number">Lucky Number</label>
-        <input type="number"id="lucky-number" >
-        <button id="check-number">Check Number</button>
-        <div id="output-box"></div>
-      </div>
+    
+      <label for="date-of-birth" class="top-1">Date of Birth</label>
+      <input type="date" id="date-of-birth" >
+      <label for="lucky-number" class="top-2">Lucky Number</label>
+      <input type="number" id="lucky-number" >
+      <button id="check-number">Check Number</button>
+      <div id="output-box"></div>
+    
     </div>
     <script src="App.js"></script>
   </body>
