more style added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
   </head>
   <body>
-    <h1>Is your birthday lucky? 🥳</h1>
+    <h1 class="main">Is your birthday lucky? 🥳</h1>
     <div class="container">
     
       <label for="date-of-birth" class="top-1">Date of Birth</label>
